Feature: Basic frontend update

--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Pig Weight Calculator</title>
 </head>
 
-<body></body>
+<body>
+    <h2>Macho Pig Weight Calculator</h2>
+
+    <input placeholder="Enter Heart Girth" data-bind="value: heart-girth">
+    <input placeholder="Enter Length" data-bind="value: length">
+    <h3 data-bind="visible: ">
+        dgfs
+    </h3>
+    <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/app.js"></script>
+</body>
 
 </html>
