Minor change of title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h2>Macho Pig Weight Calculator</h2>
+    <h2>MachoPigs Weight Calculator</h2>
 
     <input type="number" step="1" placeholder="Enter Heart Girth" data-bind="value: heartGirth, valueUpdate: 'afterkeydown'">
     <input type="number" step="1" placeholder="Enter Length" data-bind="value: length, valueUpdate: 'afterkeydown'">
