Add measurement unit - kg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <input type="number" step="1" placeholder="Enter Length" data-bind="value: length, valueUpdate: 'afterkeydown'">
     <!--<h3 data-bind="visible: totalPigWeight() > 0">-->
     <h3>
-        Pig Weighs: <span data-bind="text: totalPigWeight()"></span>
+        Pig Weighs: <span data-bind="text: totalPigWeight()"></span><span>kg</span>
     </h3>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
