Add meta tags and bootstrap css link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <title>Pig Weight Calculator</title>
+    <!--Meta tags-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Styles-->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body>
