--- a/index.html
+++ b/index.html
@@ -10,30 +10,53 @@
     <!--Styles-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script type="text/javascript" src="js/lib/jquery.js"></script>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row" id="header-title">
-            <h2>Pig Weight Calculator</h2>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="topNavbar">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                    <a class="navbar-brand" href="#" id="home">MachoPig</a>
+                </div>
+                <div class="collapse navbar-collapse" id="mainNavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <!--<li class=""><a href="#">Home</a></li>-->
+                        <li><a href="#">Instructions</a></li>
+                        <li><a href="#">Sell Pig</a></li>
+                        <li><a href="#">Buy Pig</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container main-content">
+        <div class="row text-center">
+            <h2 class="">Pig Weight Calculator</h2>
         </div>
         <hr>
-        <div class="row">
-            <input type="number" step="1" placeholder="Enter Heart Girth" data-bind="value: heartGirth, valueUpdate: 'afterkeydown'">
+        <div class="row text-center">
+            <input type="number" step="1" placeholder="Enter Heart Girth" data-bind="textInput: heartGirth">
         </div>
         <br>
-        <div class="row">
-            <input type="number" step="1" placeholder="Enter Length" data-bind="value: length, valueUpdate: 'afterkeydown'">
+        <div class="row text-center">
+            <input type="number" step="1" placeholder="Enter Length" data-bind="textInput: length">
         </div>
         <br>
-        <div class="row">
+        <div class="row text-center">
             <h3>
                 Pig Weighs: <span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span>
             </h3>
         </div>
     </div>
 
-
+    <script type="text/javascript" src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
 </body>
