feat: Make weight number strong.

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
         <hr>
         <div class="row text-center">
-            <input type="number" step="1" placeholder="Enter Heart Girth" data-bind="textInput: heartGirth">
+            <input type="number" step="1" placeholder="Enter Heart Girth (inches)" data-bind="textInput: heartGirth">
         </div>
         <br>
         <div class="row text-center">
-            <input type="number" step="1" placeholder="Enter Length" data-bind="textInput: length">
+            <input type="number" step="1" placeholder="Enter Length (inches)" data-bind="textInput: length">
         </div>
         <br>
         <div class="row text-center">
             <h3>
-                Pig Weighs: <span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span>
+                Pig weighs: <strong><span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span></strong>
             </h3>
         </div>
     </div>
