--allow-empty-message

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     
     <div class="container main-content">
         <div class="row d-flex justify-content-center">
-            <h2 class="mt-3">Pig Weight Calculator</h2>
+            <h3 class="mt-3">Pig Weight Calculator</h3>
         </div>
         <hr>
         <div class="row d-flex justify-content-center girth-input">
@@ -54,6 +54,9 @@
                 Pig weighs: <strong><span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span></strong>
             </h3>
         </div>
+        <!--<div class="row d-flex justify-content-center">
+            <img src="./images/pig-dimension.png">
+        </div>-->
     </div>
     <!--<div class="well toast">...</div>-->
 
