feat: Add image on how to pick measurements.

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <div class="collapse navbar-collapse links" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto list-inline">
                     <li class="navbar-item list-inline-item">
-                        <a href="#">Sell a Pig</a>
+                        <a class="m-2" href="#">Sell a Pig</a>
                     </li>
                     <li class="navbar-item list-inline-item">
-                        <a href="#">Buy a Pig</a>
+                        <a class="m-2" href="#">Buy a Pig</a>
                     </li>
                 </ul>
             </div>
@@ -54,9 +54,12 @@
                 Pig weighs: <strong><span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span></strong>
             </h3>
         </div>
-        <!--<div class="row d-flex justify-content-center">
+        <div class="row d-flex justify-content-center mt-5 pt-3">
+            <h5>How to pick the measurement</h5>
+        </div>
+        <div class="row d-flex justify-content-center">
             <img src="./images/pig-dimension.png">
-        </div>-->
+        </div>
     </div>
     <!--<div class="well toast">...</div>-->
 
