feat: Add meta for description.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="max-age=86400">
+    <meta name="Description" content="MachoPig calculates a pig's weight piggeries. Made by @twumm">
     <!--Manifest-->
     <link rel="manifest" href="./manifest.json">
     <!--Styles-->
