--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="max-age=86400">
-    <meta name="Description" content="MachoPig calculates a pig's weight piggeries. Made by @twumm">
+    <meta name="Description" content="MachoPig calculates a pig's weight. Made by @twumm">
     <!--Manifest-->
     <link rel="manifest" href="./manifest.json">
     <!--Styles-->
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg border-bottom">
         <div class="container">
             <a class="navbar-brand" href="#" id="home">MachoPig</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" aria-label="Menu hamburger icon">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse links" id="navbarCollapse">
@@ -54,8 +54,8 @@
                 Pig weighs: <strong><span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span></strong>
             </h3>
         </div>
-        <div class="row d-flex justify-content-center mt-5 pt-3">
-            <h5>How to pick the measurement</h5>
+        <div class="row d-flex justify-content-center mt- pt-3">
+            <h6>How to pick the measurement</h6>
         </div>
         <div class="row d-flex justify-content-center">
             <img src="./images/pig-dimension.png" alt="Pig measurement guide" defer>
@@ -63,8 +63,9 @@
     </div>
     <!--<div class="well toast">...</div>-->
 
+    <script type="text/javascript" src="js/lib/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" defer="defer"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous" defer="defer"></script>
-    <script type="text/javascript" src="js/lib/jquery.js" defer="defer"></script>
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
 </body>
