feat: Add meta for theme-color and aria for menu toggler.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Cache-control" content="max-age=86400">
     <meta name="Description" content="MachoPig calculates a pig's weight. Made by @twumm">
+    <meta name="theme-color">
     <!--Manifest-->
     <link rel="manifest" href="./manifest.json">
     <!--Styles-->
@@ -20,7 +21,7 @@
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg border-bottom">
         <div class="container">
             <a class="navbar-brand" href="#" id="home">MachoPig</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse" arialabel="Menu toggler">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse links" id="navbarCollapse">
