feat: Add id and anchor tag for Update available notification.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     <div class="alert alert-dismissible fade update-notification border-top m-0" id="update-ready" role="alert">
         <div class="container">
             <div class="row d-flex justify-content">
-                <strong>Update available. Tap to refresh</strong>
+                <a href="#" id="get-update">
+                    <strong>Update available. Tap to refresh</strong>
+                </a>
                     <button type="button" class="btn close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true" style="color: white">&times;</span>
                     </button>
