feature: Add h4 to represent pig weight in pounds

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
         <br>
         <div class="row d-flex justify-content-center">
             <h4>
-                Pig weighs: <strong><span data-bind="text: totalPigWeight().toFixed(2)"></span><span> kg</span></strong>
+                Pig weighs: <strong><span data-bind="text: totalPigWeightInKilos().toFixed(2)"></span><span> kg</span></strong>
+            </h4>
+            <br>
+        </div>
+        <div class="row d-flex justify-content-center">
+            <h4>
+                Pig weighs: <strong><span data-bind="text: totalPigWeightInPounds().toFixed(2)"></span><span> lbs</span></strong>
             </h4>
         </div>
         <div class="row d-flex justify-content-center mt- pt-3">
